<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_magin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">


        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="@dimen/default_magin"
            android:text="@string/add_order_page_upload_button"
            android:textColor="@color/white"
            style="@style/DefaultTextStyle"/>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sushi" />


    </LinearLayout>


    <EditText
        android:id="@+id/order_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/default_magin"
        android:hint="Nom du produit"
        android:paddingLeft="@dimen/default_magin"
        style="style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/default_magin"
        android:hint="@string/add_order_page_description"
        android:paddingLeft="@dimen/default_magin"
        style="style/DefaultTextStyle"/>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="@dimen/default_magin"
        android:background="@color/black"
        android:text="@string/add_order_page_confirm_button"
        android:textColor="@color/white"
        android:textSize="24dp" />


</LinearLayout>