<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="200dp"
    android:padding="@dimen/default_magin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/burger" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/pop_up_order_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_up_order_category_title"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@id/cardView3"
        android:layout_marginLeft="40dp"
        style="@style/TitleTextStyle"/>

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginRight="@dimen/default_magin"
        app:layout_constraintBottom_toBottomOf="@id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/pop_up_order_comment_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_magin"
        android:text="@string/pop_up_order_comment_subtitle"
        app:layout_constraintStart_toStartOf="@id/cardView3"
        app:layout_constraintTop_toBottomOf="@id/cardView3"
        style="@style/SubTitleTextStyle"

        />
     <TextView
         android:id="@+id/pop_up_order_description_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pop_up_order_description_subtitle"
         app:layout_constraintStart_toStartOf="@+id/pop_up_order_comment_subtitle"
         app:layout_constraintTop_toBottomOf="@id/pop_up_order_comment_subtitle"/>


</androidx.constraintlayout.widget.ConstraintLayout>

